--- a/FlashScoreAPI/packages.config
+++ b/FlashScoreAPI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net451" />
   <package id="NLog" version="4.7.3" targetFramework="net451" />
   <package id="NLog.Config" version="4.7.3" targetFramework="net451" />
   <package id="NLog.InstallNLogConfig" version="2.0" targetFramework="net451" />
